core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_result-2.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from_syn(&syn::parse_quote! { DiplomatResult<(), MyLocalStruct> },\nNone, &SpanLocation::None)"
---
Result:
  - Unit
  - Named:
      path:
        elements:
          - - MyLocalStruct
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
      lifetimes: []
  - Diplomat
